# xrtc_rtmppush

./: CMakeLists.txt  README.md  REDME.md  RtmpClient.h  build.sh  main.cpp  startvnsp.sh  stopvnsp.sh
conf/: logConfig.xml
src/: AutoLock.cpp  AutoLock.h  RtmpClient.cpp  RtmpClient.h  Vnsp_WriteLog.cpp  Vnsp_WriteLog.h  Vnsp_standard.h  main.cpp
